PyMaker/datas/object2/RawHTML/i801/Python_DOC_referPages.how-to-tell-python-ignore-a-character-when-passing-command-to-bash-python-to-ba.txt
<div class="post-text" itemprop="text">
<p>When I run the same command in a bash script it works. When I want to pass it to shell through Python's <code>os.system</code> it complains because of the {and: characters.</p>
<pre><code>import os
os.system('composer transaction submit -c admin@tutorial-network -d '{"$class": "org.acme.frame.auction.SetupDemo1"}'')


Shell Error:
os.system('composer transaction submit -c admin@tutorial-network -d '{"$class": "org.acme.frame.auction.SetupDemo1"}'')
                                                                         ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You cannot nest single quotes. The string which starts with <code>os.system('</code> ends at the next (unescaped) single quote.</p>
<p>Python offers triple quotes which provide for a trivial fix:</p>
<pre><code>os.system(r"""composer transaction submit -c admin@tutorial-network -d '{"$class": "org.acme.frame.auction.SetupDemo1"}'""")
</code></pre>
<p>A better solution altogether is to use <code>subprocess.run</code> without <code>shell=True</code> so you don't have to understand both Python's and the shell's quoting mechanisms.</p>
<pre><code>subprocess.run([
        'composer', 'transaction',
        'submit', '-c', 'admin@tutorial-network',
        '-d', '{"$class": "org.acme.frame.auction.SetupDemo1"}'],
    # probably a good idea
    check=True)
</code></pre>
<p>For (much) more on this topic, see further <a href="https://stackoverflow.com/a/51950538/874188">https://stackoverflow.com/a/51950538/874188</a></p>
</div>
<span class="comment-copy">You have troubles with the quotation. The best and recommended solution would be to use the <a href="https://docs.python.org/3/library/subprocess.html" rel="nofollow noreferrer">subprocess</a> module instead of <code>os.system()</code> and hand in the arguments as a list. See the examples in the link.</span>
<span class="comment-copy"><code>os.system("""composer transaction submit -c admin@tutorial-network -d '{"$class": "org.acme.fram e.auction.SetupDemo1"}'""")</code></span>
<span class="comment-copy">@KlausD. I have tried subprocess as well, The same syntax error.</span>
<span class="comment-copy">@AlexPython Perfect, Problem Solved. Thanks. Now, How would I pass a variable into this string without messing up the quotation? os.system("""composer transaction submit -c admin@tutorial-network -d '{"$class": "org.acme.frame.auction.Offer", "bidPrice": %variable_x, "listing": "resource:org.acme.frame.auction.FrameListing#0001", "member": "resource:org.acme.frame.auction.Member#VNO2"}'""") this does not work.</span>
<span class="comment-copy">@NimaAfraz use % formatting operator or construct your system cmd string by parts; also look at <code>subprocess</code> to make your life easier</span>
